--- a/ReferenceArch/ReferenceArch/Scenes/NoUI/NoUIViewController.xib
+++ b/ReferenceArch/ReferenceArch/Scenes/NoUI/NoUIViewController.xib
@@ -8,28 +8,32 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UIMockViewController" customModule="UIModule" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NoUIViewController" customModule="ReferenceArch" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <viewController id="hGG-8p-3lX" customClass="UIMockViewController" customModule="UIModule" customModuleProvider="target">
-            <view key="view" contentMode="scaleToFill" id="7ya-G2-cKO">
+        <viewController id="4gn-ju-xnZ" customClass="NoUIViewController" customModule="ReferenceArch" customModuleProvider="target">
+            <view key="view" contentMode="scaleToFill" id="4w7-9v-yXE">
                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UI MOCK VIEW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fTa-nN-TEV">
-                        <rect key="frame" x="149" y="437.5" width="116" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NO UI MOCK VIEW" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xQC-HV-C1b">
+                        <rect key="frame" x="124" y="437.5" width="166" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="166" id="0hL-id-8VP"/>
+                            <constraint firstAttribute="height" constant="21" id="4ca-JC-dGC"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <viewLayoutGuide key="safeArea" id="rKG-H4-cbM"/>
+                <viewLayoutGuide key="safeArea" id="XOl-B7-s32"/>
                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 <constraints>
-                    <constraint firstItem="fTa-nN-TEV" firstAttribute="centerY" secondItem="7ya-G2-cKO" secondAttribute="centerY" id="SCk-Je-FTl"/>
-                    <constraint firstItem="fTa-nN-TEV" firstAttribute="centerX" secondItem="7ya-G2-cKO" secondAttribute="centerX" id="YBP-iF-0EB"/>
+                    <constraint firstItem="xQC-HV-C1b" firstAttribute="centerX" secondItem="4w7-9v-yXE" secondAttribute="centerX" id="Ne9-dm-ldU"/>
+                    <constraint firstItem="xQC-HV-C1b" firstAttribute="centerY" secondItem="4w7-9v-yXE" secondAttribute="centerY" id="UqQ-4J-eJw"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="-364" y="-184"/>
+            <point key="canvasLocation" x="129" y="63"/>
         </viewController>
     </objects>
     <resources>
