--- a/ReferenceArch/ReferenceArch/Scenes/NoUIExample/NoUIExampleViewController.xib
+++ b/ReferenceArch/ReferenceArch/Scenes/NoUIExample/NoUIExampleViewController.xib
@@ -8,17 +8,17 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NoUIViewController" customModule="ReferenceArch" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NoUIExampleViewController" customModule="ReferenceArch" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <viewController id="4gn-ju-xnZ" customClass="NoUIViewController" customModule="ReferenceArch" customModuleProvider="target">
+        <viewController id="4gn-ju-xnZ" customClass="NoUIExampleViewController" customModule="ReferenceArch" customModuleProvider="target">
             <view key="view" contentMode="scaleToFill" id="4w7-9v-yXE">
                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NO UI MOCK VIEW" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xQC-HV-C1b">
-                        <rect key="frame" x="124" y="437.5" width="166" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NO UI EXAMPLE VIEW" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xQC-HV-C1b">
+                        <rect key="frame" x="107" y="437.5" width="200" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="166" id="0hL-id-8VP"/>
+                            <constraint firstAttribute="width" constant="200" id="0hL-id-8VP"/>
                             <constraint firstAttribute="height" constant="21" id="4ca-JC-dGC"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
