--- a/ReferenceArch/ReferenceArch/Scenes/NoUIExample/NoUIExampleViewController.xib
+++ b/ReferenceArch/ReferenceArch/Scenes/NoUIExample/NoUIExampleViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NoUIExampleViewController" customModule="ReferenceArch" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <viewController id="4gn-ju-xnZ" customClass="NoUIExampleViewController" customModule="ReferenceArch" customModuleProvider="target">
             <view key="view" contentMode="scaleToFill" id="4w7-9v-yXE">
@@ -25,14 +25,43 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Bank Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2W-cQ-OEf">
+                        <rect key="frame" x="132" y="586" width="150" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="G9w-JU-V5X"/>
+                            <constraint firstAttribute="width" constant="150" id="IoO-Zo-E72"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cVw-Gr-6BH">
+                        <rect key="frame" x="107" y="146" width="200" height="31"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="200" id="Os3-Tr-Tf6"/>
+                            <constraint firstAttribute="height" constant="31" id="vEU-mH-tQx"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="filled" title="Get Bank Name"/>
+                        <connections>
+                            <action selector="getBankNameButtonTouched:" destination="4gn-ju-xnZ" eventType="touchUpInside" id="Yc7-7s-5aD"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <viewLayoutGuide key="safeArea" id="XOl-B7-s32"/>
                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 <constraints>
+                    <constraint firstItem="cVw-Gr-6BH" firstAttribute="top" secondItem="XOl-B7-s32" secondAttribute="top" constant="102" id="4xW-MW-JfD"/>
+                    <constraint firstItem="XOl-B7-s32" firstAttribute="bottom" secondItem="X2W-cQ-OEf" secondAttribute="bottom" constant="255" id="Czf-Nv-4dU"/>
+                    <constraint firstItem="X2W-cQ-OEf" firstAttribute="centerX" secondItem="4w7-9v-yXE" secondAttribute="centerX" id="IQJ-Tk-uOX"/>
+                    <constraint firstItem="cVw-Gr-6BH" firstAttribute="centerX" secondItem="4w7-9v-yXE" secondAttribute="centerX" id="NVQ-pr-bCj"/>
                     <constraint firstItem="xQC-HV-C1b" firstAttribute="centerX" secondItem="4w7-9v-yXE" secondAttribute="centerX" id="Ne9-dm-ldU"/>
                     <constraint firstItem="xQC-HV-C1b" firstAttribute="centerY" secondItem="4w7-9v-yXE" secondAttribute="centerY" id="UqQ-4J-eJw"/>
                 </constraints>
             </view>
+            <connections>
+                <outlet property="bankNameLabel" destination="X2W-cQ-OEf" id="qZa-Ub-PcF"/>
+            </connections>
             <point key="canvasLocation" x="129" y="63"/>
         </viewController>
     </objects>
