--- a/ReferenceArch/ReferenceArch/Scenes/Root/ViewController/RootViewController.xib
+++ b/ReferenceArch/ReferenceArch/Scenes/Root/ViewController/RootViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RootViewController" customModule="ReferenceArch" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <viewController nibName="ViewController1" id="GC7-DG-FuR" customClass="RootViewController" customModule="ReferenceArch" customModuleProvider="target">
             <view key="view" contentMode="scaleToFill" id="44l-Wr-hdn">
@@ -33,13 +33,13 @@
                             </backgroundConfiguration>
                         </buttonConfiguration>
                         <connections>
-                            <action selector="moduleWithUIButtonTouched:" destination="-1" eventType="touchUpInside" id="oLy-kg-ZOo"/>
+                            <action selector="moduleWithUIButtonTouched:" destination="GC7-DG-FuR" eventType="touchUpInside" id="Nw2-03-pOW"/>
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="qyo-8G-Mrc">
-                        <rect key="frame" x="107" y="635" width="200" height="31"/>
+                        <rect key="frame" x="82" y="635" width="250" height="31"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="200" id="ERK-FT-C22"/>
+                            <constraint firstAttribute="width" constant="250" id="ERK-FT-C22"/>
                             <constraint firstAttribute="height" constant="31" id="enf-Xe-NBv"/>
                         </constraints>
                         <state key="normal" title="Button"/>
