Rename of classes and deployment target downgraded to iOS14

--- a/ReferenceArch/ReferenceArch/Scenes/NoUIExample/NoUIExampleViewController.xib
+++ b/ReferenceArch/ReferenceArch/Scenes/NoUIExample/NoUIExampleViewController.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -25,11 +26,11 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Bank Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2W-cQ-OEf">
-                        <rect key="frame" x="132" y="586" width="150" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Company Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2W-cQ-OEf">
+                        <rect key="frame" x="107" y="586" width="200" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="G9w-JU-V5X"/>
-                            <constraint firstAttribute="width" constant="150" id="IoO-Zo-E72"/>
+                            <constraint firstAttribute="width" constant="200" id="IoO-Zo-E72"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -42,7 +43,7 @@
                             <constraint firstAttribute="height" constant="31" id="vEU-mH-tQx"/>
                         </constraints>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="filled" title="Get Bank Name"/>
+                        <buttonConfiguration key="configuration" style="filled" title="Get Company Name"/>
                         <connections>
                             <action selector="getBankNameButtonTouched:" destination="4gn-ju-xnZ" eventType="touchUpInside" id="Yc7-7s-5aD"/>
                         </connections>
@@ -60,7 +61,7 @@
                 </constraints>
             </view>
             <connections>
-                <outlet property="bankNameLabel" destination="X2W-cQ-OEf" id="qZa-Ub-PcF"/>
+                <outlet property="companyNameLabel" destination="X2W-cQ-OEf" id="qZa-Ub-PcF"/>
             </connections>
             <point key="canvasLocation" x="129" y="63"/>
         </viewController>
